--- a/android/framework/baseui/build.gradle
+++ b/android/framework/baseui/build.gradle
@@ -1,9 +1,7 @@
 plugins{
     id "io.github.jamesfchen.foundation-plugin"
 }
-android{
-}
 dependencies {
-    implemention project.moduleify('framework-common')
+    implementation project.moduleify("framework-common")
 }
 
