--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -9,7 +9,7 @@ pluginManagement {
         maven { url "https://raw.githubusercontent.com/PGYER/analytics/master" }  //备用仓库（主力仓库下载不下来使用）
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url 'https://maven.aliyun.com/repository/releases' }
-//        maven { url "https://jitpack.io" }
+        maven { url "https://jitpack.io" }
         maven{ url "https://dl.bintray.com/kotlin/kotlin-eap"}
         maven { url "https://plugins.gradle.org/m2/" }
         gradlePluginPortal()
@@ -29,7 +29,7 @@ dependencyResolutionManagement {
         maven { url "https://raw.githubusercontent.com/PGYER/analytics/master" }  //备用仓库（主力仓库下载不下来使用）
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url 'https://maven.aliyun.com/repository/releases' }
-//        maven { url "https://jitpack.io" }
+        maven { url "https://jitpack.io" }
         maven { url "https://plugins.gradle.org/m2/" }
         gradlePluginPortal()
     }
