--- a/android/framework/loader/build.gradle
+++ b/android/framework/loader/build.gradle
@@ -84,4 +84,5 @@ dependencies {
     /**
      * ================================apm end=====================================
      */
+    implementation("io.github.jamesfchen:startup-api:1.0.0")
 }
