--- a/composite-builds/gradle.properties
+++ b/composite-builds/gradle.properties
@@ -29,4 +29,6 @@ minSdkVersion = 21
 targetSdkVersion = 30
 versionCode = 1
 versionName = 1.0.0
-agpVersion= 4.2.1
+AGP_VERSION= 4.2.1
+KOTLIN_VERSION = 1.5.10
+STARTUP_VERSION=1.0.0
