--- a/composite-builds/viapm/viapm-processor/build.gradle
+++ b/composite-builds/viapm/viapm-processor/build.gradle
@@ -2,9 +2,9 @@ plugins{
     id "io.github.jamesfchen.module-publisher-plugin" version '1.1.4'
 }
 publish{
-    name="viapm-compiler"
+    name="viapm-processor"
     groupId = rootProject.groupId
-    artifactId = "viapm-compiler"
+    artifactId = "viapm-processor"
     version = "1.0.0"
     website = "https://github.com/JamesfChen/spacecraft-android"
 }
