--- a/composite-builds/viopt/startup/startup-api/build.gradle
+++ b/composite-builds/viopt/startup/startup-api/build.gradle
@@ -5,7 +5,7 @@ publish {
     name = "startup-api"
     groupId = rootProject.groupId
     artifactId = "startup-api"
-    version = "1.0.0"
+    version = rootProject.STARTUP_VERSION
     website = "https://github.com/JamesfChen/spacecraft-android"
 }
 apply from: "$rootDir/aar.gradle"
@@ -15,12 +15,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    api "androidx.appcompat:appcompat:1.3.1"
-
-    api "androidx.activity:activity-ktx:1.3.1"
-    api 'androidx.fragment:fragment-ktx:1.3.5'
     api 'androidx.core:core-ktx:1.5.0'
-    api "com.blankj:utilcode:1.24.2"
 }
 
 
