--- a/composite-builds/viapm/viapm-processor/build.gradle
+++ b/composite-builds/viapm/viapm-processor/build.gradle
@@ -1,6 +1,4 @@
-plugins{
-    id "io.github.jamesfchen.module-publisher-plugin" version '1.1.4'
-}
+apply plugin: "io.github.jamesfchen.module-publisher-plugin"
 publish{
     name="viapm-processor"
     groupId = rootProject.groupId
