--- a/composite-builds/viopt/startup/startup-api/build.gradle
+++ b/composite-builds/viopt/startup/startup-api/build.gradle
@@ -1,6 +1,4 @@
-plugins{
-    id "io.github.jamesfchen.module-publisher-plugin" version '1.1.4'
-}
+apply plugin: "io.github.jamesfchen.module-publisher-plugin"
 publish {
     name = "startup-api"
     groupId = rootProject.groupId
