--- a/android/script/module_registry.gradle
+++ b/android/script/module_registry.gradle
@@ -7,7 +7,7 @@ def child(Object msg) {
  * 读取module_config.json信息以此来include具体的模块，对于模块的描述应该有这些信息
  * class Module{
  *    require  def simpleName 模块名的简写,给idea plugin读取
- *    require def format 模块格式(bundle foundation jar ,bundle可以不参加编译，即exclude，但是framwork foundation必须被include)
+ *    require def format 模块格式(plugin bundle foundation jar ,bundle可以不参加编译，即exclude，但是framwork foundation必须被include)
  *    require def group 分组是为了当exclude某个app时，其下的依赖的同组模块也会exclude
  *    require def type {api,processor,tool} 对于framework内部的模块来说，有暴露给app层的api模块，还有有processor、tool
  *    require def sourcePath :components:hotel-module:foundation
@@ -19,6 +19,7 @@ def config = new JsonSlurper().parse(file("$rootDir/module_config.json"))
 gradle.ext.allModules = config.allModules
 gradle.ext.groupId = config.groupId
 gradle.ext.buildVariants = config.buildVariants
+gradle.ext.buildArtifacts = config.buildArtifacts
 def localProperties = new Properties()
 def localPropertiesFile = new File(rootDir, 'local.properties')
 if (localPropertiesFile.exists()) {
@@ -35,13 +36,21 @@ if (localProperties.getProperty('activeBuildVariant', '')){
     localProperties.setProperty("activeBuildVariant", gradle.ext.activeBuildVariant)
     localProperties.store(new FileOutputStream(localPropertiesFile), "update modules")
 }
+if (localProperties.getProperty('activeBuildArtifact', '')){
+    gradle.ext.activeBuildArtifact = localProperties.getProperty('activeBuildArtifact', '')
+}else if (gradle.ext.buildArtifacts !=null && !gradle.ext.buildArtifacts.isEmpty()){
+    gradle.ext.activeBuildArtifact = gradle.ext.buildArtifacts.get(0)
+    localProperties.setProperty("activeBuildArtifact", gradle.ext.activeBuildArtifact)
+    localProperties.store(new FileOutputStream(localPropertiesFile), "update modules")
+}
 gradle.ext.excludeModuleMap = new LinkedHashMap<String, Object>()
 gradle.ext.sourceModuleMap = new LinkedHashMap<String, Object>()
 gradle.ext.binaryModuleMap = new LinkedHashMap<String, Object>()
-gradle.ext.framworkSrcModuleMap = [:] //目前只使用了7个fwk的模块，其余模块暂且搁置
-gradle.ext.framworkApiModuleMap = [:]
-gradle.ext.bundleSrcModuleMap = [:]
 gradle.ext.sourcePath2SimpleNameMap = [:]
+
+gradle.ext.pluginSrcModuleMap = [:]
+gradle.ext.pluginBinaryModuleMap = [:]
+gradle.ext.framworkApiModuleMap = [:]
 def findModule = { name ->
     for (def m : gradle.ext.allModules) {
         if (m.simpleName == name) {
@@ -64,40 +73,34 @@ excludeModulesStr.eachAfterSplit(',') {
 sourceModulesStr.eachAfterSplit(',') {
     gradle.ext.sourceModuleMap[it.simpleName] = it
     gradle.ext.sourcePath2SimpleNameMap[it.sourcePath] = it.simpleName
-    if (it.group == 'fwk') {
-        gradle.ext.framworkSrcModuleMap[it.simpleName] = it
-    }
-    if (it.format.contains('bundle')) {
-        gradle.ext.bundleSrcModuleMap[it.simpleName] = it
+    if (it.dynamic){
+        gradle.ext.pluginSrcModuleMap[it.simpleName] = it
     }
 }
 gradle.ext.allModules.each { m ->
-    if (m.type == 'api') {
-        gradle.ext.framworkApiModuleMap[m.simpleName] = m
-    }
-    m.binaryPath = "${gradle.ext.groupId}:${m.simpleName}:1.0.0-${gradle.ext.activeBuildVariant}-SNAPSHOT"
+    m.binaryPath = "${gradle.ext.groupId}:${m.simpleName}:1.0.0-$gradle.ext.activeBuildVariant-SNAPSHOT"
     if (!gradle.ext.sourceModuleMap.containsKey(m.simpleName) && !gradle.ext.excludeModuleMap.containsKey(m.simpleName)) {
         gradle.ext.binaryModuleMap[m.simpleName] = m
     }
 }
+child("module info ========================================================================================")
+child("activeBuildVariant:"+gradle.ext.activeBuildVariant)
 child("module begin ========================================================================================")
 gradle.ext.sourceModuleMap.each { name, module ->
     child("source module\t${module.sourcePath}")
-    if (module.simpleName == 'framework-flutter') {
-        setBinding(new Binding([gradle: this]))
-        evaluate(new File(settingsDir, 'script/flutter/include_flutter.gradle'))
-    } else {
-        include module.sourcePath
-        if (module.projectDir) {
-            project(module.sourcePath).projectDir = new File(rootProject.projectDir, module.projectDir)
-        }
+    include module.sourcePath
+    if (module.projectDir) {
+        project(module.sourcePath).projectDir = new File(rootProject.projectDir, module.projectDir)
     }
 }
 gradle.ext.excludeModuleMap.each { _, module ->
     child("\u001B[31mexclude module\u001B[0m\t${module.sourcePath}")
 }
-gradle.ext.binaryModuleMap.each { _, module ->
+gradle.ext.binaryModuleMap.each { simpleName, module ->
     child("binary module\t${module.binaryPath}")
+    if (module.dynamic){
+        gradle.ext.pluginBinaryModuleMap[simpleName] = module
+    }
 }
 
 child("module end ========================================================================================")
@@ -110,6 +113,3 @@ child("module end ==============================================================
 //    println("projectsLoaded")
 //}
 gradle.ext.modules = gradle.ext.sourceModuleMap.values() + gradle.ext.binaryModuleMap.values()
-
-
-//######################################################################################################################
