--- a/android/framework/loader/build.gradle
+++ b/android/framework/loader/build.gradle
@@ -2,9 +2,7 @@ plugins {
     id "io.github.jamesfchen.foundation-plugin"
 }
 dependencies {
-//    api 'com.google.firebase:firebase-analytics'
-//    api 'com.google.firebase:firebase-crashlytics'
-//    api 'com.google.firebase:firebase-crashlytics-ndk'
+
 
     api 'com.pgyersdk:sdk:3.0.10'
     api 'com.pgyer:analytics:4.2.1'//最好写上具体依赖的版本号 如：4.2.1
@@ -13,6 +11,12 @@ dependencies {
 //    implementation 'com.google.android.gms:play-services-fitness:16.0.1'
     api 'io.github.jamesfchen:lifecycle-api:1.1.0'
 
+    api platform("com.google.firebase:firebase-bom:$FIREBASE_VERSION")
+    api 'com.google.firebase:firebase-perf'
+    api 'com.google.firebase:firebase-perf-ktx'
+    api 'com.google.firebase:firebase-crashlytics'
+    api 'com.google.firebase:firebase-crashlytics-ndk'
+    api 'com.google.firebase:firebase-analytics'
     api 'com.firebaseui:firebase-ui-database:6.0.2'
     api 'com.firebaseui:firebase-ui-firestore:6.0.2'
     api('com.firebaseui:firebase-ui-storage:6.0.2') {
