--- a/android/components/account-module/main/src/main/AndroidManifest.xml
+++ b/android/components/account-module/main/src/main/AndroidManifest.xml
@@ -18,7 +18,61 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="net.sourceforge.simcpux.SendToWXActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden"
+            android:launchMode="singleTask"
+            android:theme="@style/MMTheme.Basic"/>
 
+        <activity
+            android:name="net.sourceforge.simcpux.GetFromWXActivity"
+            android:label="@string/app_name"
+            android:theme="@style/MMTheme.Basic"/>
+
+        <activity
+            android:name="net.sourceforge.simcpux.ShowFromWXActivity"
+            android:label="@string/app_name"
+            android:theme="@style/MMTheme.Basic"/>
+
+        <receiver
+            android:name="net.sourceforge.simcpux.AppRegister"
+            android:permission="com.tencent.mm.plugin.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.tencent.mm.plugin.openapi.Intent.ACTION_REFRESH_WXAPP" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name="net.sourceforge.simcpux.SubscribeMessageActivity"
+            android:label="@string/subscribe_message"
+            android:theme="@style/MMTheme.Basic"/>
+
+        <activity android:name="net.sourceforge.simcpux.SubscribeMiniProgramMsgActivity"
+            android:label="@string/subscribe_message"
+            android:theme="@style/MMTheme.Basic"/>
+
+        <activity android:name="net.sourceforge.simcpux.UserInfoActivity"
+            android:label="@string/app_name"
+            android:theme="@style/MMTheme.Basic"/>
+        <activity
+            android:name="net.sourceforge.simcpux.MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="sdksample" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="net.sourceforge.simcpux.wxapi.WXEntryActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:exported="true"
+            android:taskAffinity="net.sourceforge.simcpux"
+            android:launchMode="singleTask">
+        </activity>
     </application>
 
 </manifest>
