--- a/android/components/account-module/impl/src/main/AndroidManifest.xml
+++ b/android/components/account-module/impl/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize"/>
 
         <activity
-            android:name="{applicationId}.wxapi.WXPayEntryActivity"
+            android:name="${applicationId}.wxapi.WXPayEntryActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
