--- a/android/components/home-module/myhome/build.gradle
+++ b/android/components/home-module/myhome/build.gradle
@@ -27,4 +27,12 @@ android {
 dependencies {
 //    lintChecks project(path: ':lint-rules')
     implementation project.moduleify('account-export')
+    compileOnly project.moduleify('framework-common')
+    implementation project.moduleify('framework-baseui')
+    compileOnly project.moduleify('framework-image')
+    compileOnly project.moduleify('framework-network')
+    compileOnly project.moduleify('framework-storage')
+    compileOnly project.moduleify('framework-loader')
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
