update ci script

--- a/android/.gitlab-ci-hotel.yml
+++ b/android/.gitlab-ci-hotel.yml
@@ -1,20 +1,17 @@
-#确保每次给到测试的包都是最新的
 hotel-foundation:
   only:
     changes:
       - android/components/hotel-module/foundation/**/*
   stage: build
   script:
-    - ./gradlew includeSourceModule  -PmoduleList=hotel-foundation
     - ./gradlew :components:hotel-module:foundation:assemble publishDebugAarPublicationToMavenCentralRepository
-hotel-foundation-lint:
-  only:
-    changes:
-      - android/components/hotel-module/foundation/**/*
-  stage: test
-  script:
-    - ./gradlew includeSourceModule  -PmoduleList=hotel-foundation
-    - ./gradlew :components:hotel-module:foundation:lintInhouse
+#hotel-foundation-lint:
+#  only:
+#    changes:
+#      - android/components/hotel-module/foundation/**/*
+#  stage: test
+#  script:
+#    - ./gradlew :components:hotel-module:foundation:lintInhouse
 #hotel-foundation-test:
 #  only:
 #    changes:
@@ -29,17 +26,15 @@ hotel-bundle1:
       - android/components/hotel-module/bundle1/**/*
   stage: build
   script:
-    - ./gradlew includeSourceModule  -PmoduleList=hotel-bundle1
     - ./gradlew :components:hotel-module:bundle1:assemble publishDebugAarPublicationToMavenCentralRepository
 
-hotel-bundle1-lint:
-  only:
-    changes:
-      - android/components/hotel-module/bundle1/**/*
-  stage: test
-  script:
-    - ./gradlew includeSourceModule  -PmoduleList=hotel-bundle1
-    - ./gradlew :components:hotel-module:bundle1:lintInhouse
+#hotel-bundle1-lint:
+#  only:
+#    changes:
+#      - android/components/hotel-module/bundle1/**/*
+#  stage: test
+#  script:
+#    - ./gradlew :components:hotel-module:bundle1:lintInhouse
 
 # ========================
 hotel-bundle2:
@@ -48,27 +43,24 @@ hotel-bundle2:
       - android/components/hotel-module/bundle2/**/*
   stage: build
   script:
-    - ./gradlew includeSourceModule  -PmoduleList=hotel-bundle2
     - ./gradlew :components:hotel-module:bundle2:assemble publishDebugAarPublicationToMavenCentralRepository
 
-hotel-bundle2-lint:
-  only:
-    changes:
-      - android/components/hotel-module/bundle2/**/*
-  stage: test
-  script:
-    - ./gradlew includeSourceModule  -PmoduleList=hotel-bundle2
-    - ./gradlew :components:hotel-module:bundle2:lintInhouse
+#hotel-bundle2-lint:
+#  only:
+#    changes:
+#      - android/components/hotel-module/bundle2/**/*
+#  stage: test
+#  script:
+#    - ./gradlew :components:hotel-module:bundle2:lintInhouse
 # ========================
 
-hotel-daily-check:
-  only:
-    changes:
-      - android/components/hotel-module/**/*
-  stage: build
-  script:
-    - ./gradlew includeSourceModule  -PmoduleList=hotel-bundle2,hotel-bunlde1,hotel-main,hotel-foundation
-    - ./gradlew :components:hotel-module:main:fileCounter
+#hotel-daily-check:
+#  only:
+#    changes:
+#      - android/components/hotel-module/**/*
+#  stage: build
+#  script:
+#    - ./gradlew :components:hotel-module:main:fileCounter
 #lint job
 #hotelLint:
 #  only:
