--- a/android/framework/loader/build.gradle
+++ b/android/framework/loader/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation project.moduleify("framework-common")
     implementation project.moduleify("framework-network")
-    implementation project.moduleify("framework-mockserver")
+    implementation project.moduleify("mock")
     implementation project.moduleify("framework-av")
     implementation project.moduleify("framework-image")
     implementation project.moduleify("framework-storage")
