--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 include:
   - '/android/.gitlab-ci-android.yml'
   - '/composite-builds/.gitlab-ci-plugin.yml'
+  - '/vivian/.gitlab-ci-vivian.yml.yml'
 
