--- a/android/.gitlab-ci-account.yml
+++ b/android/.gitlab-ci-account.yml
@@ -5,18 +5,16 @@ account-impl-build:
       - android/components/account-module/impl/**/*
   stage: build
   script:
-    - ./gradlew includeSourceModule  -PmoduleList=account-impl
     - ./gradlew :components:account-module:impl:assemble
 
 
-account-impl-lint:
-  only:
-    changes:
-      - android/components/account-module/impl/**/*
-  stage: test
-  script:
-    - ./gradlew includeSourceModule  -PmoduleList=account-impl
-    - ./gradlew :components:account-module:impl:lintInhouse
+#account-impl-lint:
+#  only:
+#    changes:
+#      - android/components/account-module/impl/**/*
+#  stage: test
+#  script:
+#    - ./gradlew :components:account-module:impl:lintInhouse
 
 account-impl-deploy:
   only:
@@ -24,7 +22,6 @@ account-impl-deploy:
       - android/components/account-module/impl/**/*
   stage: deploy
   script:
-    - ./gradlew includeSourceModule  -PmoduleList=account-impl
     - ./gradlew :components:account-module:impl:publishDebugAarPublicationToMavenCentralRepository #发布到远程仓库
 
 ## ========================
@@ -36,18 +33,16 @@ account-export-build:
       - android/components/account-module/export/**/*
   stage: build
   script:
-    - ./gradlew includeSourceModule  -PmoduleList=account-export
     - ./gradlew :components:account-module:export:assemble
 
 
-account-export-lint:
-  only:
-    changes:
-      - android/components/account-module/export/**/*
-  stage: test
-  script:
-    - ./gradlew includeSourceModule  -PmoduleList=account-export
-    - ./gradlew :components:account-module:export:lintInhouse
+#account-export-lint:
+#  only:
+#    changes:
+#      - android/components/account-module/export/**/*
+#  stage: test
+#  script:
+#    - ./gradlew :components:account-module:export:lintInhouse
 
 account-export-deploy:
   only:
@@ -55,18 +50,16 @@ account-export-deploy:
       - android/components/account-module/export/**/*
   stage: deploy
   script:
-    - ./gradlew includeSourceModule  -PmoduleList=account-export
     - ./gradlew :components:account-module:export:publishDebugAarPublicationToMavenCentralRepository #发布到远程仓库
 
 ## ========================
-account-daily-check:
-  only:
-    changes:
-      - android/components/account-module/**/*
-  stage: build
-  script:
-    - ./gradlew includeSourceModule  -PmoduleList=account-impl,account-main,account-export
-    - ./gradlew :components:account-module:main:fileCounter
+#account-daily-check:
+#  only:
+#    changes:
+#      - android/components/account-module/**/*
+#  stage: build
+#  script:
+#    - ./gradlew :components:account-module:main:fileCounter
 
 ##debugTests:
 ##  stage: test
