--- a/android/framework/network/build.gradle
+++ b/android/framework/network/build.gradle
@@ -59,5 +59,5 @@ dependencies {
 //    implementation "com.github.jnr:jnr-unixsocket:0.23"
     api "com.google.android.gms:play-services-cronet:${CRONET_VERSION}"
     implementation project.moduleify("framework-common")
-    implementation project.moduleify("framework-mockserver")
+    implementation project.moduleify("mock")
 }
