--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -36,7 +36,7 @@ dependencyResolutionManagement {
     }
 }
 includeBuild("../composite-builds")
-includeBuild("../vivian")
+includeBuild("../vi")
 apply from:'./script/trace_gradle.gradle'
 apply from:'./script/module_registry.gradle'
 //includeBuild("framework/network/super-retrofit")
