--- a/android/framework/network/super-retrofit/retrofit-adapters/guava/build.gradle
+++ b/android/framework/network/super-retrofit/retrofit-adapters/guava/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'java-library'
-apply plugin: 'com.vanniktech.maven.publish'
+//apply plugin: 'com.vanniktech.maven.publish'
 
 dependencies {
   api project(':retrofit')
