--- a/android/framework/network/super-retrofit/retrofit-converters/protobuf/build.gradle
+++ b/android/framework/network/super-retrofit/retrofit-converters/protobuf/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java-library'
 apply plugin: 'com.google.protobuf'
-apply plugin: 'com.vanniktech.maven.publish'
+//apply plugin: 'com.vanniktech.maven.publish'
 
 dependencies {
   api project(':retrofit')
