--- a/android/framework/network/super-retrofit/retrofit/build.gradle
+++ b/android/framework/network/super-retrofit/retrofit/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java-library'
 apply plugin: 'org.jetbrains.kotlin.jvm'
-apply plugin: 'com.vanniktech.maven.publish'
+//apply plugin: 'com.vanniktech.maven.publish'
 
 dependencies {
   api deps.okhttp
